packages/rust/conundrum/src/parsers/markdown/snapshots/conundrum__parsers__markdown__code_block__tests__parses_codeblock_with_title-2.snap
---
source: packages/rust/conundrum/src/parsers/markdown/code_block.rs
expression: mdx_content
---
<AutoInsertedCodeBlock language="swift" title="my_webview_content.swift">
// MY_COMMENT: My comment here

</AutoInsertedCodeBlock>
